Fixed responsive issue on small mobile screen

--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -216,12 +216,14 @@
 .bookmarks {
   padding: 1rem 0;
   position: absolute;
-  // right: 0;
   right: -2.5rem;
   z-index: 20;
   width: 40rem;
   background-color: #fff;
   box-shadow: 0 0.8rem 5rem 2rem rgba($color-grey-dark-1, 0.1);
+  @media only screen and (max-width: $bp-smallest) {
+    right: -12rem;
+  }
 
   visibility: hidden;
   opacity: 0;
